fixed font size on mobile

--- a/style.scss
+++ b/style.scss
@@ -50,7 +50,7 @@ header {
   padding: 20px;
   h2 {
     color: var(--darkGrayCyan);
-    font-size: 17px;
+    font-size: 15px;
   }
   input[type="radio"] {
     display: none;
@@ -139,7 +139,7 @@ header {
       }
       .message {
         text-align: right;
-        font-size: 17px;
+        font-size: 15px;
         margin: 0;
         width: 70%;
         font-weight: bold;
